--- a/src/Web/Bookworm.Web/wwwroot/css/select2.css
+++ b/src/Web/Bookworm.Web/wwwroot/css/select2.css
@@ -1,60 +1,66 @@
-﻿.select2-container--default .select2-selection--multiple {
-    font-size: 1.5rem;
-    border: solid 2px black !important;
-    margin-top: 2rem;
+﻿.selectionContainer {
     background-color: var(--clr-primary) !important;
+    margin-top: 1rem;
+    height: 100% !important;
+    padding: 10px !important;
 }
 
-.select2-selection__rendered {
-    padding-left: 20px !important;
-}
-
-.select2-search select2-search--inline {
-    color: white !important;
-}
-
-.select2-container--default
-.select2-selection--multiple
-.select2-selection__rendered
-.select2-selection__choice {
-    background-color: var(--clr-secondary);
-}
-
-    .select2-container--default
-    .select2-selection--multiple
-    .select2-selection__rendered
-    .select2-selection__choice
-    .select2-selection__choice__remove {
-        color: black !important;
+    .selectionContainer .select2-search__field {
+        height: 30px !important;
+        padding: 0 !important;
+        margin: 0 !important;
+        font-size: 1.3rem !important;
+        color: white !important;
+        font-family: 'Diphylleia', serif !important;
     }
 
-        .select2-container--default
-        .select2-selection--multiple
-        .select2-selection__rendered
-        .select2-selection__choice
-        .select2-selection__choice__remove:hover {
-            color: red !important;
+        .selectionContainer .select2-search__field::placeholder {
+            color: white !important;
+            font-style: italic;
         }
 
-.select2-results {
-    font-size: 1.5rem !important;
-    background-color: var(--clr-primary) !important;
-    color: white !important;
-}
-
-.select2-search input {
-    color: white !important;
-}
-
-.select2-results__option--highlighted {
+.selectionContainer .select2-selection__rendered .select2-selection__choice {
+    margin-top: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0.5rem !important;
+    font-size: 1.2rem;
     background-color: var(--clr-secondary) !important;
 }
 
-.select2-results__option[aria-selected=true] {
-    background-color: #c7fcec !important;
+        .selectionContainer .select2-selection__rendered .select2-selection__choice .select2-selection__choice__display {
+            padding-left: 12px !important;
+            color: black !important;
+        }
+
+        .selectionContainer .select2-selection__rendered .select2-selection__choice .select2-selection__choice__remove {
+            color: black !important;
+            padding-left: 8px !important;
+            padding-right: 8px !important;
+        }
+
+            .selectionContainer .select2-selection__rendered .select2-selection__choice .select2-selection__choice__remove:hover {
+                color: red !important;
+            }
+
+.select2DropdownMenu {
+    background-color: var(--clr-primary) !important;
+    color: white !important;
+    font-size: 1.3rem !important;
 }
 
-.select2-search__field::-webkit-input-placeholder,
-.select2-search__field::placeholder {
-    color: white !important;
-}
+    .select2DropdownMenu .select2-results__options .select2-results__option:hover {
+        background-color: var(--clr-secondary) !important;
+    }
+
+    .select2DropdownMenu .select2-results__options .select2-results__option--highlighted {
+        background-color: var(--clr-secondary) !important;
+    }
+
+    .select2DropdownMenu .select2-results__options .select2-results__option--selected {
+        background-color: var(--clr-secondary) !important;
+    }
+
+        .select2DropdownMenu .select2-results__options .select2-results__option--selected:hover {
+            color: black !important;
+            background-color: #c7fcec !important;
+        }
